feat: finish auto tracer v1 and collector endpoint

--- a/packages/api/src/infrastructure/database/table.yml
+++ b/packages/api/src/infrastructure/database/table.yml
@@ -17,7 +17,7 @@ Resources:
         - AttributeName: sk
           KeyType: RANGE
       TimeToLiveSpecification:
-        AttributeName: expiresAt
+        AttributeName: _expires
         Enabled: true
       GlobalSecondaryIndexes:
         - IndexName: type-sk
