--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": true,
   "packageManager": "yarn@4.4.1",
   "scripts": {
-    "deploy": "yarn workspace @trace-stack/api deploy"
+    "deploy": "yarn turbo deploy",
+    "start": "turbo dev"
   },
   "workspaces": {
     "packages": [
@@ -18,6 +19,7 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "turbo": "^2.1.1"
   }
 }
