--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,8 +4,7 @@
   "license": "proprietary",
   "private": true,
   "scripts": {
-    "start": "AUTHORIZER=$(cat tests/local-auth.txt | xargs) serverless offline start --noAuth",
-    "prepare": "husky",
+    "dev": "serverless offline start",
     "deploy": "serverless deploy --verbose",
     "test": "jest --coverage"
   },
@@ -13,7 +12,9 @@
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/lib-dynamodb": "^3.637.0",
     "@includable/serverless-middleware": "^2.2.0",
-    "dynamodb-toolbox": "^1.3.8"
+    "date-fns": "^3.6.0",
+    "dynamodb-toolbox": "^1.3.8",
+    "hono": "^4.5.10"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -21,10 +22,8 @@
     "@types/jest": "^29.5.12",
     "babel-jest": "^29.7.0",
     "esbuild": "^0.20.1",
-    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "serverless": "^3.38.0",
     "serverless-domain-manager": "^7.3.6",
@@ -35,8 +34,5 @@
     "setupFiles": [
       "./tests/set-env.js"
     ]
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
   }
 }
