--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/client-lambda": "^3.637.0",
     "@aws-sdk/lib-dynamodb": "^3.637.0",
+    "@hono/node-server": "^1.12.2",
     "@includable/serverless-middleware": "^2.2.0",
     "date-fns": "^3.6.0",
     "dynamodb-toolbox": "^1.3.8",
