--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,8 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "serverless offline start",
-    "deploy": "serverless deploy --verbose",
-    "test": "jest --coverage"
+    "deploy": "serverless deploy --verbose"
   },
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.637.0",
@@ -20,22 +19,10 @@
     "hono": "^4.5.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@types/jest": "^29.5.12",
-    "babel-jest": "^29.7.0",
     "esbuild": "^0.20.1",
-    "jest": "^29.7.0",
-    "jest-junit": "^16.0.0",
-    "prettier": "^3.2.5",
     "serverless": "^3.38.0",
     "serverless-domain-manager": "^7.3.6",
     "serverless-esbuild": "^1.51.0",
     "serverless-offline": "^13.3.3"
-  },
-  "jest": {
-    "setupFiles": [
-      "./tests/set-env.js"
-    ]
   }
 }
