feat: implement simple transaction graph

--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -18,9 +18,12 @@
     "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cytoscape": "^3.30.2",
+    "cytoscape-klay": "^3.1.4",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.437.0",
     "react": "^18.3.1",
+    "react-cytoscapejs": "^2.0.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-json-tree": "^0.19.0",
@@ -32,6 +35,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/cytoscape": "^3",
+    "@types/cytoscape-klay": "^3",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
