--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "prettier": "^3.3.3",
+    "serverless-domain-manager": "^7.4.0",
     "turbo": "^2.1.1"
   }
 }
