--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,6 +7,9 @@ on:
   push:
     branches:
       - master
+    paths:
+      - 'packages/deploy-script/**'
+      - '.github/workflows/push.yml'
 
 jobs:
   release:
