--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -6,7 +6,7 @@ concurrency:
 on:
   push:
     branches:
-      - master
+      - main
     paths:
       - 'packages/deploy-script/**'
       - '.github/workflows/push.yml'
