--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "deploy": "yarn turbo deploy",
     "build": "yarn turbo build",
     "test": "yarn turbo test",
-    "start": "turbo dev"
+    "start": "turbo dev",
+    "release": "multi-semantic-release"
   },
   "workspaces": {
     "packages": [
@@ -20,7 +21,9 @@
     ]
   },
   "devDependencies": {
+    "@anolilab/multi-semantic-release": "^1.1.3",
     "prettier": "^3.3.3",
+    "semantic-release": "^24.1.0",
     "serverless-domain-manager": "^7.4.0",
     "turbo": "^2.1.1"
   }
