feat: remove direct deps in workspace

--- a/turbo.json
+++ b/turbo.json
@@ -2,11 +2,13 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
+      "cache": false,
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**"]
     },
     "deploy": {
+      "cache": false,
       "dependsOn": ["build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
       "outputs": ["dist/**", ".serverless/**", ".esbuild/**"]
