--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Install dependencies
         run: yarn --immutable
 
-      - name: Build & test
-        run: yarn build && yarn test
+      - name: Run tests
+        run: yarn test
 
       - name: Install latest npm
         run: npm install -g npm@latest
