--- a/packages/deploy-script/package.json
+++ b/packages/deploy-script/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deploy-trace-stack",
-  "version": "1.0.3",
+  "version": "0.0.0",
   "description": "Self-hosted serverless tracing (deploy script).",
   "type": "module",
   "main": "index.js",
@@ -10,6 +10,14 @@
     "type": "git",
     "url": "https://github.com/includable/trace-stack.git"
   },
+  "author": "Includable <hello@includable.com>",
+  "license": "MIT",
+  "keywords": [
+    "serverless",
+    "tracing",
+    "aws",
+    "lambda"
+  ],
   "dependencies": {
     "@aws-sdk/client-apigatewayv2": "^3.645.0",
     "boxen": "^8.0.1",
