fix: run build before deploy

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "packageManager": "yarn@4.4.1",
   "scripts": {
-    "deploy": "yarn turbo deploy",
+    "deploy": "yarn turbo build && yarn turbo deploy",
     "build": "yarn turbo build",
     "test": "yarn turbo test",
     "start": "turbo dev",
