fix: pass through env vars

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "private": true,
   "packageManager": "yarn@4.4.1",
   "scripts": {
-    "deploy": "yarn turbo build && yarn turbo deploy",
-    "build": "yarn turbo build",
-    "test": "yarn turbo test",
-    "start": "turbo dev",
+    "deploy": "yarn build && yarn turbo deploy --env-mode=loose --color",
+    "build": "yarn turbo build --env-mode=loose --color",
+    "test": "yarn turbo test --env-mode=loose --color",
+    "start": "turbo dev --env-mode=loose --color",
     "release": "multi-semantic-release"
   },
   "workspaces": {
