fix: IAMs for auto trace

--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -80,9 +80,9 @@ provider:
             - "*"
         - Effect: Allow
           Action:
-            - apigateway:GetRestApis
+            - apigateway:GET
           Resource:
-            - "*"
+            - "arn:aws:apigateway:${aws:region}::/apis"
 
 layers:
   tracer:
