fix: IAM for getting layer versions

--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -76,6 +76,7 @@ provider:
           Action:
             - lambda:ListFunctions
             - lambda:UpdateFunctionConfiguration
+            - lambda:GetLayerVersion
           Resource:
             - "*"
         - Effect: Allow
