--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,7 +16,8 @@
     "@includable/serverless-middleware": "^2.2.0",
     "date-fns": "^3.6.0",
     "dynamodb-toolbox": "^1.3.8",
-    "hono": "^4.5.10"
+    "hono": "^4.5.10",
+    "p-limit": "^6.1.0"
   },
   "devDependencies": {
     "esbuild": "^0.20.1",
