fix: use method with higher rate limit

--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -79,6 +79,7 @@ provider:
             - lambda:ListFunctions
             - lambda:UpdateFunctionConfiguration
             - lambda:GetLayerVersion
+            - lambda:GetFunction
             - lambda:ListTags
           Resource:
             - "*"
