--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -17,7 +17,8 @@
     "date-fns": "^3.6.0",
     "dynamodb-toolbox": "^1.3.8",
     "hono": "^4.5.10",
-    "p-limit": "^6.1.0"
+    "p-limit": "^6.1.0",
+    "slug": "^9.1.0"
   },
   "devDependencies": {
     "esbuild": "^0.20.1",
