--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -27,7 +27,7 @@
     "lucide-react": "^0.437.0",
     "react": "^18.3.1",
     "react-cytoscapejs": "^2.0.0",
-    "react-date-range": "^2.0.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-json-tree": "^0.19.0",
     "react-router-dom": "^6.26.1",
