--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,6 +25,7 @@
     "serverless": "^3.38.0",
     "serverless-domain-manager": "^7.3.6",
     "serverless-esbuild": "^1.51.0",
-    "serverless-offline": "^13.3.3"
+    "serverless-offline": "^13.3.3",
+    "serverless-plugin-log-retention": "^2.0.0"
   }
 }
