--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "serverless offline start",
-    "deploy": "serverless deploy --verbose"
+    "deploy": "serverless deploy --verbose",
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.637.0",
@@ -17,6 +18,8 @@
     "date-fns": "^3.6.0",
     "dynamodb-toolbox": "^1.3.8",
     "hono": "^4.5.10",
+    "jest": "^29.7.0",
+    "jest-esbuild": "^0.3.0",
     "p-limit": "^6.1.0",
     "slug": "^9.1.0"
   },
