--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -24,6 +24,7 @@
     "slug": "^9.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.13",
     "esbuild": "^0.20.1",
     "serverless": "^3.38.0",
     "serverless-domain-manager": "^7.3.6",
