--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -13,22 +13,22 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.5",
     "@xyflow/react": "^12.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "cytoscape": "^3.30.2",
-    "cytoscape-klay": "^3.1.4",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.437.0",
     "react": "^18.3.1",
-    "react-cytoscapejs": "^2.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-json-tree": "^0.19.0",
@@ -40,8 +40,6 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "@types/cytoscape": "^3",
-    "@types/cytoscape-klay": "^3",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
