feat: add e2e test

--- a/turbo.json
+++ b/turbo.json
@@ -16,6 +16,10 @@
       "dependsOn": ["build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"]
     },
+    "test:e2e": {
+      "dependsOn": ["build"],
+      "inputs": ["$TURBO_DEFAULT$", ".env*"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
