--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,7 @@ concurrency:
 jobs:
   e2e:
     name: E2E tests
+    runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
