feat: show Cloudwatch logs for invocation(fixes #26)

--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -89,6 +89,13 @@ provider:
             - "*"
         - Effect: Allow
           Action:
+            - logs:GetLogEvents
+            - logs:DescribeLogGroups
+            - logs:DescribeLogStreams
+          Resource:
+            - "*"
+        - Effect: Allow
+          Action:
             - apigateway:GET
           Resource:
             - "arn:aws:apigateway:${aws:region}::/apis"
