--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-api-gateway": "^3.637.0",
+    "@aws-sdk/client-cloudwatch-logs": "^3.658.1",
     "@aws-sdk/client-dynamodb": "^3.637.0",
     "@aws-sdk/client-lambda": "^3.637.0",
     "@aws-sdk/lib-dynamodb": "^3.637.0",
