--- a/packages/deploy-script/package.json
+++ b/packages/deploy-script/package.json
@@ -20,6 +20,9 @@
   ],
   "dependencies": {
     "@aws-sdk/client-apigatewayv2": "^3.645.0",
+    "@aws-sdk/client-dynamodb": "^3.665.0",
+    "@aws-sdk/lib-dynamodb": "^3.665.0",
+    "bcryptjs": "^2.4.3",
     "boxen": "^8.0.1",
     "chalk": "^5.3.0",
     "degit": "^2.8.4",
